--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 *.dat
 *.pdf
 *.png
-variacion_periodicidad
-clusters
-phasefold_plots
-imagenes_robper
-imagenes
+variacion_periodicidad/
+clusters/
+phasefold_plots/
+imagenes_robper/
+imagenes/
